@@ -1,3 +1,8 @@
+2006-01-24 11:33 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmetric.c (gridEdgeRatio) report gridMap failure and
+	return -1.0
+
 2006-01-23 16:22 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridfacer.c (gridfacerRemoveEdgesWithNode) removes edges
